--- a/runoob-react-course/02-react-install/index.html
+++ b/runoob-react-course/02-react-install/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>React App</title>
 </head>
 <body>
-
+  <div id="example"></div>
+  <script src="index.js"></script>
 </body>
 </html>
